fix(spinner): display correctly on small/big devices

--- a/src/assets/spinner.scss
+++ b/src/assets/spinner.scss
@@ -1,46 +1,52 @@
 @import 'theme';
 
-.spinner {
-  width: 6rem;
-  height: 6rem;
-  position: relative;
-  margin: 25% auto 25% auto;
-}
-
-.double-bounce1 {
-  background-color: md-color($primary, A400);
-}
-
-.double-bounce1, .double-bounce2 {
-  width: 100%;
+.spinner-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 100%;
-  border-radius: 50%;
-  opacity: 0.6;
-  position: absolute;
-  top: 0;
-  left: 0;
 
-  -webkit-animation: sk-bounce 2.0s infinite ease-in-out;
-  animation: sk-bounce 2.0s infinite ease-in-out;
-}
+  .spinner {
+    width: 6rem;
+    height: 6rem;
+    position: relative;
+  }
 
-.double-bounce2 {
-  -webkit-animation-delay: -1.0s;
-  animation-delay: -1.0s;
-  background-color: md-color($accent, A400);
-}
+  .double-bounce1 {
+    background-color: md-color($primary, A400);
+  }
 
-@-webkit-keyframes sk-bounce {
-  0%, 100% { -webkit-transform: scale(0.0) }
-  50% { -webkit-transform: scale(1.0) }
-}
+  .double-bounce1, .double-bounce2 {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    opacity: 0.6;
+    position: absolute;
+    top: 0;
+    left: 0;
 
-@keyframes sk-bounce {
-  0%, 100% {
-    transform: scale(0.0);
-    -webkit-transform: scale(0.0);
-  } 50% {
-    transform: scale(1.0);
-    -webkit-transform: scale(1.0);
+    -webkit-animation: sk-bounce 2.0s infinite ease-in-out;
+    animation: sk-bounce 2.0s infinite ease-in-out;
+  }
+
+  .double-bounce2 {
+    -webkit-animation-delay: -1.0s;
+    animation-delay: -1.0s;
+    background-color: md-color($accent, A400);
+  }
+
+  @-webkit-keyframes sk-bounce {
+    0%, 100% { -webkit-transform: scale(0.0) }
+    50% { -webkit-transform: scale(1.0) }
+  }
+
+  @keyframes sk-bounce {
+    0%, 100% {
+      transform: scale(0.0);
+      -webkit-transform: scale(0.0);
+    } 50% {
+      transform: scale(1.0);
+      -webkit-transform: scale(1.0);
+    }
   }
 }
