--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,4 +29,15 @@ html {
   // .md-sidenav-backdrop.md-sidenav-shown {
   //   height: 100%;
   // }
+  #toto {
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    flex-direction: column;
+    -webkit-box-pack: start;
+    justify-content: flex-start;
+    -webkit-box-align: stretch;
+    align-items: stretch;
+    height: 100%;
+  }
 }
